fix: reduce padding on header on mobile

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h2 {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 2rem;
   text-align: center;
-  padding: 2rem 0;
+  padding: 2vh 0;
 }
 
 footer {
